--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -22,6 +22,7 @@ jobs:
       - name: e2e tests
         uses: cypress-io/github-action@v2
         with:
-          command: npm run test:e2e
           start: npm run start-prod
+          command: npm run test:e2e
           wait-on: http://localhost:5000
+          wait-on-timeout: 120
