--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -25,5 +25,5 @@ jobs:
           record: true
           browser: chrome
           start: npm run start-prod
-          command: npm run test:e2e
-          wait-on: http://localhost:5000
+          command: 'npm run test:e2e'
+          wait-on: 'http://localhost:5000'
