--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -22,7 +22,8 @@ jobs:
       - name: e2e tests
         uses: cypress-io/github-action@v2
         with:
-          spec: cypress/integration/pokedex.js
-          command: 'npm run test:e2e'
+          browser: chrome
+          headless: true
+          command: npm run test:e2e
           start: npm run start-prod
-          wait-on: 'http://localhost:5000/'
+          wait-on: http://localhost:5000
