--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -33,3 +33,5 @@ jobs:
         uses: akhileshns/heroku-deploy@v3.12.12
         with:
           heroku_api_key: ${{secrets.HEROKU_API_KEY}}
+          heroku_app_name: 'stark-dawn-46433' #Must be unique in Heroku
+          heroku_email: 'kratosshadab@gmail.com'
