--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -35,3 +35,5 @@ jobs:
           heroku_api_key: ${{secrets.HEROKU_API_KEY}}
           heroku_app_name: 'stark-dawn-46433' #Must be unique in Heroku
           heroku_email: 'kratosshadab@gmail.com'
+          healthcheck: 'https://stark-dawn-46433.herokuapp.com/health'
+          checkstring: 'ok'
