--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -37,3 +37,4 @@ jobs:
           heroku_email: 'kratosshadab@gmail.com'
           healthcheck: 'https://stark-dawn-46433.herokuapp.com/health'
           checkstring: 'ok'
+          rollbackonhealthcheckfailed: true
