--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -48,7 +48,10 @@ jobs:
           healthcheck: 'https://stark-dawn-46433.herokuapp.com/health'
           checkstring: 'ok'
           rollbackonhealthcheckfailed: true
-
+  versioning_pipeline:
+    runs-on: ubuntu-18.04
+    steps:
+      - uses: actions/checkout@v2
       - name: Bump version and push tag
         if: ${{ github.event_name == 'push' }}
         uses: anothrNick/github-tag-action@1.33.0
