--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -49,14 +49,38 @@ jobs:
           checkstring: 'ok'
           rollbackonhealthcheckfailed: true
 
+      - name: build notification success
+        if: success()
+        uses: 8398a7/action-slack@v3
+        with:
+          status: ${{ job.status }}
+          fields: repo,commit,author,job,took # selectable (default: repo,message)
+          custom_payload: |
+            {
+              attachments: [{
+                color: 'good',
+                text: `A new version deployed to https://stark-dawn-46433.herokuapp.com/ (${{process.env.AS_REF}}) by ${{ process.env.AS_AUTHOR }} build took ${{ process.env.AS_TOOK }}`,
+              }]
+            }
+        env:
+          SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }} # required
+
+      - name: build notification failure
+        if: failure()
+        uses: 8398a7/action-slack@v3
+        with:
+          status: ${{ job.status }}
+          fields: repo,message,commit,author,took # selectable (default: repo,message)
+        env:
+          SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }} # required
+
   versioning_pipeline: # job
     runs-on: ubuntu-18.04
     steps: # step
       - uses: actions/checkout@v2 # get repository
       - name: Bump version and push tag
         if: contains(join(github.event.commits.*.message) , '#skip') == false && (github.event_name == 'pull_request') == false
-        uses: anothrNick/github-tag-action@1.33.0
+        uses: anothrNick/github-tag-action@eca2b69f9e2c24be7decccd0f15fdb1ea5906598
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           DEFAULT_BUMP: patch
-# contains(join(github.event.commits.*.message), '#skip')
