--- a/.github/workflows/hello.yml
+++ b/.github/workflows/hello.yml
@@ -4,6 +4,9 @@ on:
   push:
     branches:
       - master
+  pull_request:
+    branches: [master]
+    types: [opened, synchronize] # on open and update
 
 jobs:
   hello_world_job:
