--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -58,7 +58,7 @@ jobs:
             {
               attachments: [{
                 color: 'good',
-                text: `A new version deployed to https://stark-dawn-46433.herokuapp.com/ (${process.env.AS_REF}) by ${ process.env.AS_AUTHOR } build took ${ process.env.AS_TOOK }`,
+                text: `A new version deployed to https://stark-dawn-46433.herokuapp.com/ (${process.env.AS_COMMIT}) by ${ process.env.AS_AUTHOR } build took ${ process.env.AS_TOOK }`,
               }]
             }
         env:
