--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -36,7 +36,7 @@ jobs:
           headless: true
           command: npm run test:e2e
           start: npm run start-prod
-          wait-on: http://localhost:5000
+          wait-on: http://localhost:50001
 
       - name: heroku deployment
         if: github.event_name == 'push' && contains(join(github.event.commits.*.message) , '#skip') == false
@@ -58,7 +58,7 @@ jobs:
             {
               attachments: [{
                 color: 'good',
-                text: `A new version deployed to https://stark-dawn-46433s.herokuapp.com/ (${process.env.AS_COMMIT}) by ${ process.env.AS_AUTHOR } build took ${ process.env.AS_TOOK }`,
+                text: `A new version deployed to https://stark-dawn-46433.herokuapp.com/ (${process.env.AS_COMMIT}) by ${ process.env.AS_AUTHOR } build took ${ process.env.AS_TOOK }`,
               }]
             }
         env:
